--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -289,6 +289,7 @@ button {
     color: black;
     z-index: 2;
     font-size: 20px;
+    margin: 0px;
   }
 }
 
